# DocIngest

./: .env.example  .gitignore  AGENTS.md  ARCHITECTURE.md  BACKEND_API.md  DESIGN.md  Dockerfile.example  GUI_DESIGN.md  IMAGE_PREVIEW_PLAN.md  INTEGRATION.md  INTEGRATION_SKILL.md  MARKITDOWN_BORROW.md  MCP_README.md  README.md  VISION_DEDUP_WIP.md  docingest.yaml  pyproject.toml  requirements.txt  start_gui.bat
.claude/skills/docingest/: SKILL.md
.github/workflows/: mirror.yml
config/: default.yaml
docs/: AGENTS.md  ARCHITECTURE.md  COMPETITIVE_POSITIONING.md  GUI_DESIGN.md  GUI_DRAFT.pen  INTEGRATION.md  INTEGRATION_SKILL.md  VIDEO_RESEARCH.md  docling_parse_OOM_Windows_长期监控.md
docs/GUI/: BACKEND_API.md  GUI_DESIGN.md
packaging/: README.md  build_exe.ps1  docingest_gui.spec  launch_gui.py  sandbox_test.wsb  smoke_test.py
scripts/: README.md  install_python_deps.ps1  install_python_deps.sh  install_system_deps.ps1  install_system_deps.sh  verify_deps.py
skills/: refine_default.SKILL.md  refine_faithful.SKILL.md  refine_html.SKILL.md
src/docingest/: __init__.py  __main__.py  api.py  cli.py  config.py  doctor.py  incremental.py  inspect.py  mcp_server.py  pipeline.py  providers.py  refine.py  safety.py
src/docingest/chunkers/: SOURCE_MD_CONTRACT.md  __init__.py  base.py  heading.py  recursive.py  sheet.py  slide.py  table_splitter.py  timestamp.py
src/docingest/enrichment/: path_injector.py
src/docingest/graph/: __init__.py  api.py  cache.py  cli.py  enricher.py  providers.py
src/docingest/graph/adapters/: __init__.py  chunks_loader.py  llm_adapter.py
src/docingest/graph/backends/: __init__.py  base.py  lightrag_backend.py
src/docingest/gui/: __init__.py  __main__.py  gui_api.py  gui_app.py  gui_logic.py
src/docingest/gui/web/: app.js  index.html
src/docingest/gui/web/styles/: base.css  screens.css  tokens.css
src/docingest/hooks/: __init__.py  derive_aliases.py  derive_tags.py  docx_omml.py  file_metadata.py  pptx_chart.py  sanitize.py  strip_repeating.py  xlsx_connector.py
src/docingest/hooks/_docx_math/: __init__.py
src/docingest/integrations/: __init__.py  langchain.py
src/docingest/models/: audio_provider.py  cache.py  provider.py  token_tracker.py
src/docingest/output/: chunks_writer.py  index_builder.py  keyword_extractor.py  knowledge_map.py  markdown_writer.py  quality_report.py  run_log.py  tags_enrichment.py  visualizer.py
src/docingest/parsers/: __init__.py  base.py  docling_parser.py  media_parser.py  text_parser.py  vision.py
src/docingest/utils/: __init__.py  binary_finder.py  bundled_binaries.py  encryption.py  format_detector.py  library.py  resources.py  script_detector.py  timeout.py  url_resolver.py  xlsx_sheet_map.py  zip_expander.py
test_incremental/: run_tests.py
test_incremental/docs/: beta.md
tests/: bundle_deps_probe.py  chunking_stress.py  e2e_runlog.py  manual_compare.py  test_config_override.py  test_mixed.py
tests/fixtures/: test_chart.pptx  test_interview.ja.srt  test_omml.docx
tests/incremental/: run_tests.py
tests/incremental/docs/: alpha.md
tests/unit/: test_api.py  test_auto_structure_score.py  test_chunker_overflow.py  test_command_catalog.py  test_config_override.py  test_demote_headings.py  test_file_concurrency.py  test_flexibility_regressions.py  test_graph_enrich.py  test_graph_internals.py  test_graph_optional.py  test_gt_slice.py  test_lineage.py  test_markdown_normalize_video.py  test_mixed.py  test_model_unification.py  test_native_video_upload_timeout.py  test_output_control.py  test_provider_concurrency.py  test_refine_split.py  test_retry.py  test_slide_chunker.py  test_source_md_contract.py  test_supported_extensions.py  test_token_tracker.py  test_triage.py  test_vision_systemic_failure.py  test_xlsx_sheet_map.py
