[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "docingest"
version = "0.1.0"
description = "Universal document preprocessing engine for RAG and Agentic Search"
requires-python = ">=3.10"
license = { text = "MIT" }

dependencies = [
    # Core: document parsing
    "docling>=2.95",          # Document parsing (PDF/PPT/Excel/HTML/images).
                              # 2.92+ moved torch to [models-local] extras —
                              # pulling docling base no longer drags 5.6GB torch.

    # Core: AI/LLM
    "litellm>=1.83",          # Multi-provider LLM API (Vision, chunking assist).
                              # 1.82.7/1.82.8 had a PyPI supply-chain
                              # compromise; >=1.83 is the safe floor.

    # Core: CLI & config
    "typer>=0.12",            # CLI framework
    "pyyaml>=6.0",            # YAML config loading
    "rich>=13.0",             # Terminal output formatting
    "python-dotenv>=1.0",     # .env file loading for API keys

    # Core: caching & data
    "diskcache>=5.6",         # AI call result caching
    "openpyxl>=3.1",          # Excel reading (inspect + chunker)
    "pillow>=10.0",           # Image processing (page screenshots)

    # Hooks: format-specific enrichment
    "python-pptx>=1.0",       # PPTX chart data direct-read
    "beautifulsoup4>=4.12",   # DOCX OMML → LaTeX preprocessing
    "defusedxml>=0.7",        # XML safety (OMML, EPUB)

    # PDF fallback & inspection
    "pymupdf>=1.24",          # Garbled text recovery + PDF page count (inspect)
    "requests>=2.31",         # URL resolution (yt-dlp info download)
]

[project.optional-dependencies]
ocr = [
    "docling[easyocr]",       # EasyOCR support (multi-language)
]
tesseract = [
    "docling[tesserocr]",     # Tesseract OCR support
]
nlp = [
    "sudachipy>=0.6",         # Japanese morphological analysis (keyword extraction)
    "sudachidict_core>=20240409",  # SudachiPy core dictionary
]
mcp = [
    "fastmcp>=2.0",           # MCP server framework
]
audio = [
    "dashscope",              # Qwen3-ASR (default audio transcription engine)
]
graph = [
    # Optional GraphRAG layer (docingest.graph). Loads only when explicitly
    # imported via `import docingest.graph`; main `docingest run` works
    # unchanged without these installed.
    "lightrag-hku>=1.0,<2.0", # Knowledge graph + community detection backend
    "openai>=1.50",           # OpenAI embeddings (default embedding provider)
    # nest_asyncio is applied ONLY by the MCP server entry point (not the
    # library / CLI path). LightRAG 1.4's internal asyncio.Lock binds to
    # the first event loop and rejects subsequent asyncio.run() calls,
    # which silently breaks the 2nd+ query in the long-running MCP server
    # process. nest_asyncio.apply() lets asyncio.run() reuse / nest the
    # existing loop instead of spawning a fresh one each time. See
    # mcp_server.py for the apply site and README "Known issue" section.
    "nest_asyncio>=1.6",
    # numpy is already a transitive dep of docling/litellm; no need to pin.
]
graph-local = [
    # Local sentence-transformers embeddings (zero API cost). Adds ~2 GB of
    # PyTorch wheels — kept separate so users opting for OpenAI / Gemini
    # embeddings don't pay this download.
    "sentence-transformers>=2.7",
]
graph-gemini = [
    # Optional: Gemini embeddings via google-generativeai. Most users on
    # the [graph] path use OpenAI embeddings; opt in only if you want
    # Gemini's text-embedding-004.
    "google-generativeai>=0.7",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]
# Install everything: pip install -e ".[nlp,mcp,audio,ocr,graph]"

[project.scripts]
docingest = "docingest.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/docingest"]
